# S2Mosaic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASING.md  bench_medoid_memory.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: Advanced - wide area visual export.ipynb  Example use - aoi.ipynb  Example use - bounds.ipynb  Example use - grid id.ipynb  Example use - grid_id.ipynb  Example use - grid_id0.ipynb  Mosaic method comparison.ipynb  Quick start.ipynb
s2mosaic/: __init__.py  _types.py  aggregation.py  bounds.py  cache.py  config.py  coordinator.py  data_reader.py  frequent_coverage.py  gdal_env.py  geometry.py  helpers.py  masking.py  mosaic_core.py  mosaic_utils.py  output.py  readers.py  sources.py  stac.py  stac_bounds.py  stac_utils.py  streaming.py
s2mosaic/pipelines/: __init__.py  bounds.py  bounds_scl.py  grid.py
scripts/: bench_results.jsonl  benchmark_network.py
tests/: test_aggregation.py  test_coordinator.py  test_data_reader.py  test_frequent_coverage.py  test_gdal_env.py  test_geometry.py  test_helpers.py  test_masking.py  test_mosaic.py  test_output.py  test_pipeline_bounds.py  test_pipeline_grid.py  test_readers.py  test_sources.py  test_stac.py  test_streaming.py  test_units.py  test_validation.py
